OpafProjectVisualForcePages/force-app/main/default/objects/Shipment__c/fields/NDC_Code__c.field-meta.xml
<CustomField>
    <fullName>NDC_Code__c</fullName>
    <label>NDC Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>