OpafProjectVisualForcePages/force-app/main/default/objects/Shipment__c/fields/Ship_To_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_First_Name__c</fullName>
    <label>Ship To First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>