OpafProjectVisualForcePages/force-app/main/default/objects/Shipment__c/fields/Shipment_Status__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Status__c</fullName>
    <label>Shipment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>