OpafProjectVisualForcePages/force-app/main/default/objects/Shipment__c/fields/User_Type__c.field-meta.xml
<CustomField>
    <fullName>User_Type__c</fullName>
    <label>User Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>