OpafProjectVisualForcePages/force-app/main/default/objects/Shipment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>External_Shipment_Id__c</columns>
    <columns>Case__c</columns>
    <columns>Patient__c</columns>
    <columns>Product__c</columns>
    <columns>Ship_Address_Line_1__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>